export interface Room {
    name: string;
    description: string;
    category: string;
    building: string;
    floor: number | undefined;
}
